[package]
name = "rom-media-rs"
version = "0.3.1"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal= "0.11.0"
rom-loaders-rs= {git = "https://github.com/madwareru/rom-loaders-rs", version = "0.3.0"}